fix: support high contrast mode in color components

--- a/components/colorarea/skin.css
+++ b/components/colorarea/skin.css
@@ -3,6 +3,12 @@
     box-shadow: inset 0 0 0 var(--spectrum-colorarea-border-size) var(--spectrum-colorarea-border-color);
   }
 }
+.spectrum-ColorArea-gradient {
+  forced-color-adjust: none;
+}
+.spectrum-ColorHandle-color {
+  forced-color-adjust: none;
+}
 
 .spectrum-ColorArea {
   &.is-disabled {
@@ -14,6 +20,17 @@
 
     .spectrum-ColorArea-gradient {
       display: none;
+    }
+  }
+}
+
+@media (forced-colors: active) {
+  :root {
+    --spectrum-colorarea-fill-color-disabled : GrayText;
+  }
+  .spectrum-ColorArea {
+    &.is-disabled {
+      forced-color-adjust: none;
     }
   }
 }
